Update about me content

--- a/index.html
+++ b/index.html
@@ -658,8 +658,8 @@
           <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=600&h=400&fit=crop" alt="SonicFlow Music App" style="width:100%; height:100%; object-fit:cover; display:block;">
         </div>
         <div class="project-content">
-          <span class="project-tag">Figma</span>
-          <h3>SonicFlow - Music Streaming</h3>
+          <span class="project-tag">iOS & Android</span>
+          <h3>MusicFlow - Music Streaming</h3>
           <p>A modern music streaming application with personalized playlists, seamless playback controls, and social music discovery. Designed to create an immersive listening experience with smooth navigation and expressive animations.</p>
           <p><strong>Role:</strong> UX/UI Designer</p>
           <ul class="design-points">
@@ -668,7 +668,7 @@
             <li>Visual Design & Animations — creating engaging UI with smooth microinteractions</li>
           </ul>
           <div style="margin-top:1rem;">
-            <a href="https://www.figma.com/design/nfQKXQ6LCEeA4CIGapSCFN/Projekat-4--Sonic-Flow---Maida-%C5%A0abanovi%C4%87?node-id=0-1&t=SUPxJIJTDehjawjM-1" class="btn btn-secondary" target="_blank" rel="noopener">Open Figma Prototype</a>
+            <a href="/figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
           </div>
         </div>
       </div>
@@ -677,8 +677,8 @@
           <img src="https://images.unsplash.com/photo-1495521821757-a1efb6729352?w=600&h=400&fit=crop" alt="CookMate Recipe App" style="width:100%; height:100%; object-fit:cover; display:block;">
         </div>
         <div class="project-content">
-          <span class="project-tag">Figma</span>
-          <h3>CookMate - Recipe App</h3>
+          <span class="project-tag">iOS & Android</span>
+          <h3>Smart Recipe – Personalized Recipe App</h3>
           <p>A comprehensive recipe discovery app featuring personalized meal suggestions, step-by-step cooking guides, and ingredient-based search. Designed with an intuitive interface to make cooking accessible and enjoyable for all skill levels.</p>
           <p><strong>Role:</strong> UX/UI Designer</p>
           <ul class="design-points">
@@ -692,16 +692,16 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="https://www.figma.com/design/EwpqOkEr2Nb9ygdV9a87Er/Projekat-5--CookMate---Maida-Sabanovic?node-id=0-1&t=YEaSXxZNkVaQNvgw-1" class="btn btn-secondary" target="_blank" rel="noopener">Open Figma Prototype</a>
+            <a href="/cookm.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
           </div>
         </div>
       </div>
 
       <div class="project-card">
-        <div class="project-image" style="background: linear-gradient(135deg, #1a1a2e, #0f0f1e); font-size: 4rem; display: flex; align-items: center; justify-content: center;">💰</div>
+        <div><img style="width: 100%; height: auto;" src="/Smart spend background.png"></div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
-          <h3>Spendo - Money Manager</h3>
+          <h3>Smart Spend - Money Manager</h3>
           <p>A personal finance management app that helps users track expenses, create budgets, and achieve financial goals. Features intuitive categorization, visual analytics, and smart spending insights to empower better financial decisions.</p>
           <p><strong>Role:</strong> UX/UI Designer</p>
           <ul class="design-points">
@@ -715,7 +715,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="https://www.figma.com/design/SHvYQm0oDfwYAZMBkikobw/Projekat-6--Spendo--Maida-Sabanovic?node-id=0-1&t=ZDsauXwwvOVwppjj-1" class="btn btn-secondary" target="_blank" rel="noopener">Open Figma Prototype</a>
+            <a href="/moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
           </div>
         </div>
       </div>
