--- a/assets/figma.html
+++ b/assets/figma.html
@@ -176,7 +176,7 @@
 
         <div class="actions">
           <a href="/index.html">View Figma</a>
-          <a href="/music-flow-case-study.html" class="secondary">Case Study</a>
+          <a href="/assets/music-flow-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
