--- a/assets/figma.html
+++ b/assets/figma.html
@@ -187,9 +187,9 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "/music flow.png",
-      "/music flow 2.png",
-      "/music flow 3.png"
+      "/assets/music flow.png",
+      "/assets/music flow 2.png",
+      "/assets/music flow 3.png"
     ];
 
     let currentIndex = 0;
