--- a/assets/index.html
+++ b/assets/index.html
@@ -668,7 +668,7 @@
             <li>Visual Design & Animations — creating engaging UI with smooth microinteractions</li>
           </ul>
           <div style="margin-top:1rem;">
-            <a href="/figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
+            <a href="/assets/figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
           </div>
         </div>
       </div>
@@ -692,7 +692,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="/cookm.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
+            <a href="/assets/cookm.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
           </div>
         </div>
       </div>
@@ -715,7 +715,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="/moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
+            <a href="moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
           </div>
         </div>
       </div>
