--- a/assets/cookm.html
+++ b/assets/cookm.html
@@ -177,7 +177,7 @@
 
         <div class="actions">
           <a href="/index.html">View Figma</a>
-          <a href="/smart-recipe-case-study.html" class="secondary">Case Study</a>
+          <a href="/assets/smart-recipe-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
@@ -188,7 +188,7 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "/CookMate.png",
+      "/assets/CookMate.png",
     
     ];
 
