--- a/assets/figma.html
+++ b/assets/figma.html
@@ -175,7 +175,7 @@
         </div>
 
         <div class="actions">
-          <a href="/index.html">View Figma</a>
+          <a href="/assets/index.html">View Figma</a>
           <a href="/assets/music-flow-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
