--- a/assets/cookm.html
+++ b/assets/cookm.html
@@ -176,7 +176,7 @@
         </div>
 
         <div class="actions">
-          <a href="/index.html">View Figma</a>
+          <a href="/assets/index.html">View Figma</a>
           <a href="/assets/smart-recipe-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
