--- a/assets/index.html
+++ b/assets/index.html
@@ -715,7 +715,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
+            <a href="assets/moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
           </div>
         </div>
       </div>
