--- a/assets/index.html
+++ b/assets/index.html
@@ -655,7 +655,7 @@
     <div class="projects-grid">
       <div class="project-card">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=600&h=400&fit=crop" alt="SonicFlow Music App" style="width:100%; height:100%; object-fit:cover; display:block;">
+          <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=600&h=400&fit=crop" alt="Music Flow Music App" style="width:100%; height:100%; object-fit:cover; display:block;">
         </div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
