--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             <li>Visual Design & Animations — creating engaging UI with smooth microinteractions</li>
           </ul>
           <div style="margin-top:1rem;">
-            <a href="/assets/figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
+            <a href="figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
           </div>
         </div>
       </div>
