--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="/assets/cookm.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
+            <a href="cookm.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
           </div>
         </div>
       </div>
