--- a/cookm.html
+++ b/cookm.html
@@ -176,8 +176,8 @@
         </div>
 
         <div class="actions">
-          <a href="/assets/index.html">View Figma</a>
-          <a href="/assets/smart-recipe-case-study.html" class="secondary">Case Study</a>
+          <a href="/index.html">View Figma</a>
+          <a href="/smart-recipe-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
