--- a/moneyManager.html
+++ b/moneyManager.html
@@ -176,7 +176,7 @@
         </div>
 
         <div class="actions">
-          <a href="/assets/index.html">View Figma</a>
+          <a href="/index.html">View Figma</a>
           <a href="/assets/money-manager-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
