--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
       </div>
 
       <div class="project-card">
-        <div><img style="width: 100%; height: auto;" src="/assets/Smart spend background.png"></div>
+        <div><img style="width: 100%; height: auto;" src="/Smart spend background.png"></div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
           <h3>Smart Spend - Money Manager</h3>
