--- a/cookm.html
+++ b/cookm.html
@@ -176,8 +176,8 @@
         </div>
 
         <div class="actions">
-          <a href="/index.html">View Figma</a>
-          <a href="/smart-recipe-case-study.html" class="secondary">Case Study</a>
+          <a href="index.html">View Figma</a>
+          <a href="smart-recipe-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
@@ -188,7 +188,7 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "/assets/CookMate.png",
+      "CookMate.png",
     
     ];
 
