--- a/figma.html
+++ b/figma.html
@@ -187,9 +187,9 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "/music-flow-1.png",
-      "/music-flow-2.png",
-      "/music-flow-3.png"
+      "music-flow-1.png",
+      "music-flow-2.png",
+      "music-flow-3.png"
     ];
 
     let currentIndex = 0;
