--- a/money-manager-case-study.html
+++ b/money-manager-case-study.html
@@ -136,7 +136,7 @@
   </nav>
 
   <div class="container">
-    <a href="/assets/moneyManager.html" class="back-link">← Back to Project</a>
+    <a href="moneyManager.html" class="back-link">← Back to Project</a>
 
     <h1>Smart Spend App – UI/UX Design</h1>
 
