--- a/music-flow-case-study.html
+++ b/music-flow-case-study.html
@@ -142,7 +142,7 @@
   </nav>
 
   <div class="container">
-    <a href="/assets/figma.html" class="back-link">← Back to Project</a>
+    <a href="figma.html" class="back-link">← Back to Project</a>
 
     <h1>Music Flow App – Case Study</h1>
 
