--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
       </div>
 
       <div class="project-card">
-        <div><img style="width: 100%; height: auto;" src="/Smart spend background.png"></div>
+        <div><img style="width: 100%; height: auto;" src="Smart spend background.png"></div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
           <h3>Smart Spend - Money Manager</h3>
@@ -715,7 +715,7 @@
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="/moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
+            <a href="moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
           </div>
         </div>
       </div>
