--- a/moneyManager.html
+++ b/moneyManager.html
@@ -176,8 +176,8 @@
         </div>
 
         <div class="actions">
-          <a href="/index.html">View Figma</a>
-          <a href="/assets/money-manager-case-study.html" class="secondary">Case Study</a>
+          <a href="index.html">View Figma</a>
+          <a href="money-manager-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
@@ -188,8 +188,8 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "/assets/Money manager 1.png",
-      "/assets/Money manager 2 app.png",
+      "Money manager 1.png",
+      "Money manager 2 app.png",
     ];
 
     let currentIndex = 0;
