--- a/figma.html
+++ b/figma.html
@@ -175,8 +175,8 @@
         </div>
 
         <div class="actions">
-          <a href="/index.html">View Figma</a>
-          <a href="/music-flow-case-study.html" class="secondary">Case Study</a>
+          <a href="index.html">View Figma</a>
+          <a href="music-flow-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
