--- a/smart-recipe-case-study.html
+++ b/smart-recipe-case-study.html
@@ -148,7 +148,7 @@
   </nav>
 
   <div class="container">
-    <a href="assets/cookm.html" class="back-link">← Back to Project</a>
+    <a href="cookm.html" class="back-link">← Back to Project</a>
 
     <h1>Smart Recipe App – UI/UX Design</h1>
 
