--- a/moneyManager.html
+++ b/moneyManager.html
@@ -116,7 +116,7 @@
       display: inline-block;
       padding: 14px 24px;
       border-radius: 14px;
-      background: #fff;
+      background: #b122e0;
       color: #000;
       text-decoration: none;
       font-weight: 600;
