--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
         <a href="#" class="social-icon" title="Behance">b</a>
         <a href="mailto:smaaida@gmail.com" class="social-icon" title="Email">✉️</a>
       </div>
-      <a href="mailto:smaaida@gmail.com" class="btn btn-primary">Send Me an Email</a>
+      <a href="mailto:smaaida25@gmail.com" class="btn btn-primary">Send Me an Email</a>
     </div>
   </section>
 
