--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
         <a href="#" class="social-icon" title="LinkedIn">in</a>
         <a href="#" class="social-icon" title="Dribbble">🎨</a>
         <a href="#" class="social-icon" title="Behance">b</a>
-        <a href="mailto:smaaida@gmail.com" class="social-icon" title="Email">✉️</a>
+        <a href="mailto:smaida2325@gmail.com" class="social-icon" title="Email">✉️</a>
       </div>
       <a href="mailto:smaida2325@gmail.com" class="btn btn-primary">Send Me an Email</a>
     </div>
