--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
       <h2>Let's Work Together</h2>
       <p>I'm always interested in hearing about new projects and opportunities. Feel free to reach out!</p>
       <div class="social-links">
-        <a href="#" class="social-icon" title="LinkedIn">in</a>
+        <a href="https://www.linkedin.com/in/maida-šabanović-125816389?utm_source=share_via&utm_content=profile&utm_medium=member_android" class="social-icon" title="LinkedIn">in</a>
         <a href="#" class="social-icon" title="Dribbble">🎨</a>
         <a href="#" class="social-icon" title="Behance">b</a>
         <a href="mailto:smaida2325@gmail.com" class="social-icon" title="Email">✉️</a>
