--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 
       <div class="project-card">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1512941691920-25bda36dc643?w=600&h=400&fit=crop" alt="New App" style="width:100%; height:100%; object-fit:cover; display:block;">
+          <img src="" alt="New App" style="width:100%; height:100%; object-fit:cover; display:block;">
         </div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
