--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ Role: UX/UI Designer
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="your-app.html" class="btn btn-secondary" rel="noopener">View App</a>
+            <a href="mzikr.html" class="btn btn-secondary" rel="noopener">View App</a>
           </div>
         </div>
       </div>
