--- a/mzikr.html
+++ b/mzikr.html
@@ -175,7 +175,7 @@
 
         <div class="actions">
           <a href="index.html">Home</a>
-          <a href="smart-recipe-case-study.html" class="secondary">Case Study</a>
+          <a href="mzikr-case-study.html" class="secondary">Case Study</a>
         </div>
       </div>
 
