--- a/index.html
+++ b/index.html
@@ -756,8 +756,8 @@ Role: UX/UI Designer
         </div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
-          <h3>Another App Project</h3>
-          <p>Add your app description here. Describe what the app does, its key features, and the problem it solves for users.</p>
+          <h3>Fitvibe</h3>
+          <p>Fitvibe is a fitness app that helps users stay motivated and consistent with their workout routines. It features personalized workout plans, progress tracking, and a community-driven approach to fitness. The app is designed to be engaging, supportive, and easy to use for all fitness levels.</p>
           <p><strong>Role:</strong> UX/UI Designer</p>
           <ul class="design-points">
             <li>Research phase — understanding user needs and pain points</li>
