--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@ Role: UX/UI Designer
             <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
-            <a href="another-app.html" class="btn btn-secondary" rel="noopener">View App</a>
+            <a href="fitvibe.html" class="btn btn-secondary" rel="noopener">View App</a>
           </div>
         </div>
       </div>
