--- a/fitvibe.html
+++ b/fitvibe.html
@@ -186,7 +186,8 @@
   <script>
     // 👇 UBACI SVOJE SLIKE
     const images = [
-      "teretana.jpg",
+      "f1.png",
+      "f2.png",
     
     ];
 
