--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ Role: UX/UI Designer
 
       <div class="project-card">
         <div class="project-image">
-          <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=600&h=400&fit=crop" alt="Another App" style="width:100%; height:100%; object-fit:cover; display:block;">
+          <img src="teretana.jpg" alt="Another App" style="width:100%; height:100%; object-fit:cover; display:block;">
         </div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
