--- a/fitvibe-case-study.html
+++ b/fitvibe-case-study.html
@@ -150,7 +150,7 @@
   <div class="container">
     <a href="fitvibe.html" class="back-link">← Back to Project</a>
 
-    <h1>mZikr – UI/UX Design</h1>
+    <h1>FitVibe – UI/UX Design</h1>
 
     <div class="case-study-content">
       <p>
