--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ Role: UX/UI Designer
       <div style="margin-top: 2rem; padding-top: 2rem; border-top: 1px solid rgba(102, 126, 234, 0.2);">
         <h3 style="color: var(--light); margin-bottom: 1rem; font-size: 1.2rem;">Design Tools & Technologies</h3>
         <p style="color: #a0aec0; margin-bottom: 0.5rem;">
-          <strong>Primary Tools:</strong> Figma, Adobe XD, Framer
+          <strong>Primary Tools:</strong> Figma
         </p>
         <p style="color: #a0aec0; margin-bottom: 0.5rem;">
           <strong>Specializations:</strong> Mobile App Design, UX Research, Wireframing, Prototyping, User Testing, Interaction Design
