--- a/index.html
+++ b/index.html
@@ -660,13 +660,7 @@
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
           <h3>MusicFlow - Music Streaming</h3>
-          <p>A modern music streaming application with personalized playlists, seamless playback controls, and social music discovery. Designed to create an immersive listening experience with smooth navigation and expressive animations.</p>
-          <p><strong>Role:</strong> UX/UI Designer</p>
-          <ul class="design-points">
-            <li>Music User Behavior Research — understanding listening habits and preferences</li>
-            <li>Wireframing & Flow Design — designing intuitive player controls and playlist management</li>
-            <li>Visual Design & Animations — creating engaging UI with smooth microinteractions</li>
-          </ul>
+          <p>A modern music streaming app with personalized playlists and immersive listening experience. Discover new music that matches your taste with AI-powered recommendations.</p>
           <div style="margin-top:1rem;">
             <a href="figma.html"  class="btn btn-secondary" rel="noopener">View Music Flow</a>
           </div>
@@ -678,18 +672,11 @@
         </div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
-          <h3>Smart Recipe – Personalized Recipe App</h3>
-          <p>A comprehensive recipe discovery app featuring personalized meal suggestions, step-by-step cooking guides, and ingredient-based search. Designed with an intuitive interface to make cooking accessible and enjoyable for all skill levels.</p>
-          <p><strong>Role:</strong> UX/UI Designer</p>
-          <ul class="design-points">
-            <li>User Research & Personas — understanding cooking preferences and pain points</li>
-            <li>Information Architecture — organizing recipes and designing navigation flows</li>
-            <li>Visual Design & Prototyping — creating engaging UI with interactive elements</li>
-          </ul>
+          <h3>Smart Recipe</h3>
+          <p>Recipe discovery app with personalized suggestions and cooking guides. Find the perfect recipe based on the ingredients you have at home.</p>
           <div class="project-tools">
             <span class="tool-badge">Figma</span>
             <span class="tool-badge">Prototyping</span>
-            <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
             <a href="smart-recipe.html" class="btn btn-secondary"  rel="noopener">View Smart Recipe</a>
@@ -701,18 +688,11 @@
         <div><img style="width: 100%; height: auto;" src="Smart spend background.png"></div>
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
-          <h3>Smart Spend - Money Manager</h3>
-          <p>A personal finance management app that helps users track expenses, create budgets, and achieve financial goals. Features intuitive categorization, visual analytics, and smart spending insights to empower better financial decisions.</p>
-          <p><strong>Role:</strong> UX/UI Designer</p>
-          <ul class="design-points">
-            <li>Financial Behavior Research — understanding spending patterns and user goals</li>
-            <li>Wireframing & User Flows — designing budget tracking and expense categorization</li>
-            <li>Data Visualization & Design — making complex financial data accessible and actionable</li>
-          </ul>
+          <h3>Smart Spend</h3>
+          <p>Finance app for tracking expenses and managing budgets with visual analytics. Gain insights into your spending habits and achieve your financial goals faster.</p>
           <div class="project-tools">
             <span class="tool-badge">Figma</span>
             <span class="tool-badge">Prototyping</span>
-            <span class="tool-badge">User Testing</span>
           </div>
           <div style="margin-top:1rem;">
             <a href="moneyManager.html" class="btn btn-secondary"  rel="noopener">View Smart Spend</a>
@@ -727,22 +707,10 @@
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
           <h3>mZikr</h3>
-          <p>A thoughtfully designed dhikr app focused on supporting daily remembrance through guided practice, progress tracking, and a calm, distraction-free experience. Designed to encourage consistency, mindfulness, and spiritual connection with an intuitive and modern interface.
-
-Role: UX/UI Designer
-• User research — understanding daily worship habits and spiritual needs
-• Flow & interaction design — creating simple, meaningful navigation
-• Visual design — building a serene interface that promotes focus and reflection</p>
-          <p><strong>Role:</strong> UX/UI Designer</p>
-          <ul class="design-points">
-            <li>Research phase — understanding user needs and pain points</li>
-            <li>Design phase — creating wireframes and high-fidelity mockups</li>
-            <li>Testing phase — validating design decisions with users</li>
-          </ul>
+          <p>Dhikr app for daily remembrance with guided practice and distraction-free interface. Build consistent spiritual habits with progress tracking and personalized reminders.</p>
           <div class="project-tools">
             <span class="tool-badge">Figma</span>
-            <span class="tool-badge">Prototyping</span>
-            <span class="tool-badge">User Testing</span>
+            <span class="tool-badge">Design</span>
           </div>
           <div style="margin-top:1rem;">
             <a href="mzikr.html" class="btn btn-secondary" rel="noopener">View App</a>
@@ -757,17 +725,10 @@ Role: UX/UI Designer
         <div class="project-content">
           <span class="project-tag">iOS & Android</span>
           <h3>Fitvibe</h3>
-          <p>Fitvibe is a fitness app that helps users stay motivated and consistent with their workout routines. It features personalized workout plans, progress tracking, and a community-driven approach to fitness. The app is designed to be engaging, supportive, and easy to use for all fitness levels.</p>
-          <p><strong>Role:</strong> UX/UI Designer</p>
-          <ul class="design-points">
-            <li>Research phase — understanding user needs and pain points</li>
-            <li>Design phase — creating wireframes and high-fidelity mockups</li>
-            <li>Testing phase — validating design decisions with users</li>
-          </ul>
+          <p>Fitness app with personalized workout plans and progress tracking. Stay motivated with customized routines designed for your fitness level and goals.</p>
           <div class="project-tools">
             <span class="tool-badge">Figma</span>
-            <span class="tool-badge">Prototyping</span>
-            <span class="tool-badge">User Testing</span>
+            <span class="tool-badge">Design</span>
           </div>
           <div style="margin-top:1rem;">
             <a href="fitvibe.html" class="btn btn-secondary" rel="noopener">View App</a>
